--- a/page2.html
+++ b/page2.html
@@ -57,6 +57,7 @@
       background-color: #3E2723; /* Dark chocolate color */
       border-radius: 50%;
       pointer-events: none; /* Prevent chips from triggering events */
+      box-shadow: -2px -2px 4px rgba(255, 255, 255, 0.5); /* Highlight effect */
     }
 
     /* Chocolate chips positions and sizes */
