--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
     }
 
     .game-container {
-      display: flex;
+      display: none; /* Initially hidden */
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -60,7 +60,6 @@
       box-shadow: -2px -2px 4px rgba(255, 255, 255, 0.5); /* Highlight effect */
     }
 
-    /* Chocolate chips positions and sizes */
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
     .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
     .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
@@ -95,6 +94,37 @@
     .footer-button:hover {
       text-decoration: underline;
     }
+
+    /* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 1.5em;
+    }
+
+    .modal-content {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .close-modal {
+      margin-top: 10px;
+      background: white;
+      color: black;
+      border: none;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -103,9 +133,8 @@
     <span id="score">0</span> cookies
   </div>
 
-  <div class="game-container">
+  <div class="game-container" id="cookieContainer">
     <div class="click-circle" onclick="incrementScore()" tabindex="0">
-      <!-- Chocolate chips -->
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
@@ -120,99 +149,49 @@
   </div>
 
   <footer>
-    <button class="footer-button">Cookie</button>
-    <button class="footer-button">Store</button>
-    <button class="footer-button">Special</button>
-    <button class="footer-button">Stats</button>
-    <button class="footer-button">Misc</button>
+    <button class="footer-button" onclick="toggleCookie()">Cookie</button>
+    <button class="footer-button" onclick="openModal('Store')">Store</button>
+    <button class="footer-button" onclick="openModal('Special')">Special</button>
+    <button class="footer-button" onclick="openModal('Stats')">Stats</button>
+    <button class="footer-button" onclick="openModal('Misc')">Misc</button>
   </footer>
 
+  <!-- Modal -->
+  <div class="modal" id="modal">
+    <div class="modal-content" id="modalContent">
+      Modal Content
+      <button class="close-modal" onclick="closeModal()">Close</button>
+    </div>
+  </div>
+
   <script>
-    async function openDatabase() {
-      return new Promise((resolve, reject) => {
-        const request = indexedDB.open('cookieClickerDB', 1);
+    const cookieContainer = document.getElementById('cookieContainer');
+    const modal = document.getElementById('modal');
+    const modalContent = document.getElementById('modalContent');
 
-        request.onerror = (event) => {
-          console.error('Database error:', event.target.error);
-          reject(event.target.error);
-        };
-
-        request.onsuccess = (event) => {
-          resolve(event.target.result);
-        };
-
-        request.onupgradeneeded = (event) => {
-          const db = event.target.result;
-          if (!db.objectStoreNames.contains('scores')) {
-            db.createObjectStore('scores', { keyPath: 'id' });
-          }
-        };
-      });
-    }
-
-    async function getScore() {
-      const db = await openDatabase();
-      return new Promise((resolve, reject) => {
-        const transaction = db.transaction('scores', 'readonly');
-        const store = transaction.objectStore('scores');
-        const request = store.get(1);
-
-        request.onerror = (event) => {
-          console.error('Error retrieving score:', event.target.error);
-          reject(event.target.error);
-        };
-
-        request.onsuccess = (event) => {
-          const result = event.target.result;
-          resolve(result ? result.value : 0);
-        };
-      });
-    }
-
-    async function updateScore(score) {
-      const db = await openDatabase();
-      return new Promise((resolve, reject) => {
-        const transaction = db.transaction('scores', 'readwrite');
-        const store = transaction.objectStore('scores');
-        const request = store.put({ id: 1, value: score });
-
-        request.onerror = (event) => {
-          console.error('Error updating score:', event.target.error);
-          reject(event.target.error);
-        };
-
-        request.onsuccess = () => {
-          resolve();
-        };
-      });
-    }
-
-    async function incrementScore() {
-      try {
-        let score = await getScore();
-        score++;
-        document.getElementById('score').textContent = score;
-        await updateScore(score);
-        const circle = document.querySelector('.click-circle');
-        circle.style.transform = 'scale(1.1)'; // Scale up cookie and chips
-        setTimeout(() => {
-          circle.style.transform = 'scale(1)';
-        }, 100);
-      } catch (error) {
-        console.error('Error handling score:', error);
+    function toggleCookie() {
+      if (cookieContainer.style.display === 'none' || !cookieContainer.style.display) {
+        cookieContainer.style.display = 'flex';
+      } else {
+        cookieContainer.style.display = 'none';
       }
     }
 
-    async function initialize() {
-      try {
-        const score = await getScore();
-        document.getElementById('score').textContent = score;
-      } catch (error) {
-        console.error('Error initializing score:', error);
-      }
+    function openModal(content) {
+      modalContent.firstChild.nodeValue = content;
+      modal.style.display = 'flex';
     }
 
-    initialize();
+    function closeModal() {
+      modal.style.display = 'none';
+    }
+
+    function incrementScore() {
+      const scoreElement = document.getElementById('score');
+      let score = parseInt(scoreElement.textContent, 10) || 0;
+      score++;
+      scoreElement.textContent = score;
+    }
   </script>
 
 </body>
