--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
     }
 
     .game-container {
-      display: none; /* Initially hidden */
+      display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -47,29 +47,53 @@
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
       cursor: pointer;
       transition: transform 0.1s ease-in-out;
-      outline: none; /* Removed focus blue border */
+      outline: none;
       user-select: none;
-      -webkit-tap-highlight-color: transparent; /* Disable tap highlight */
+      -webkit-tap-highlight-color: transparent;
     }
 
     .chocolate-chip {
       position: absolute;
-      background-color: #3E2723; /* Dark chocolate color */
+      background-color: #3E2723;
       border-radius: 50%;
-      pointer-events: none; /* Prevent chips from triggering events */
-      box-shadow: -2px -2px 4px rgba(255, 255, 255, 0.5); /* Highlight effect */
+      pointer-events: none;
+      box-shadow: -2px -2px 4px rgba(255, 255, 255, 0.5);
     }
 
+    /* Chocolate chips positions */
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
     .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
     .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
     .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
     .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-    .chocolate-chip:nth-child(6) { width: 25px; height: 25px; top: 40%; left: 30%; }
-    .chocolate-chip:nth-child(7) { width: 18px; height: 18px; top: 65%; left: 75%; }
-    .chocolate-chip:nth-child(8) { width: 26px; height: 26px; top: 35%; left: 55%; }
-    .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
-    .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
+
+    .dim-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle, transparent, rgba(0, 0, 255, 0.5));
+      display: none;
+      z-index: 10;
+    }
+
+    .gui {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      height: 60%;
+      background-color: rgba(255, 255, 255, 0.9);
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+      display: none;
+      z-index: 20;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      color: black;
+    }
 
     footer {
       width: 100%;
@@ -94,103 +118,66 @@
     .footer-button:hover {
       text-decoration: underline;
     }
-
-    /* Modal Styles */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 1.5em;
-    }
-
-    .modal-content {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    .close-modal {
-      margin-top: 10px;
-      background: white;
-      color: black;
-      border: none;
-      padding: 5px 10px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
+
+  <div class="dim-background" id="dimBackground"></div>
 
   <div class="counter-box">
     <span id="score">0</span> cookies
   </div>
 
-  <div class="game-container" id="cookieContainer">
-    <div class="click-circle" onclick="incrementScore()" tabindex="0">
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
+  <div class="game-container">
+    <div class="click-circle">
+      <!-- Chocolate chips -->
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
+  </div>
+
+  <div class="gui" id="storeGUI">
+    <h2>Store</h2>
+    <p>Buy upgrades and items here!</p>
+  </div>
+  <div class="gui" id="specialGUI">
+    <h2>Special</h2>
+    <p>Special events and items.</p>
+  </div>
+  <div class="gui" id="statsGUI">
+    <h2>Stats</h2>
+    <p>Check your progress here.</p>
+  </div>
+  <div class="gui" id="miscGUI">
+    <h2>Misc</h2>
+    <p>Extra settings and options.</p>
   </div>
 
   <footer>
-    <button class="footer-button" onclick="toggleCookie()">Cookie</button>
-    <button class="footer-button" onclick="openModal('Store')">Store</button>
-    <button class="footer-button" onclick="openModal('Special')">Special</button>
-    <button class="footer-button" onclick="openModal('Stats')">Stats</button>
-    <button class="footer-button" onclick="openModal('Misc')">Misc</button>
+    <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
+    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
+    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
+    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
-  <!-- Modal -->
-  <div class="modal" id="modal">
-    <div class="modal-content" id="modalContent">
-      Modal Content
-      <button class="close-modal" onclick="closeModal()">Close</button>
-    </div>
-  </div>
-
   <script>
-    const cookieContainer = document.getElementById('cookieContainer');
-    const modal = document.getElementById('modal');
-    const modalContent = document.getElementById('modalContent');
+    function toggleGUI(guiId) {
+      const gui = document.getElementById(guiId);
+      const dimBackground = document.getElementById('dimBackground');
+      const isVisible = gui.style.display === 'block';
 
-    function toggleCookie() {
-      if (cookieContainer.style.display === 'none' || !cookieContainer.style.display) {
-        cookieContainer.style.display = 'flex';
-      } else {
-        cookieContainer.style.display = 'none';
+      // Close all GUIs and reset the dim background
+      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
+      dimBackground.style.display = 'none';
+
+      // Toggle the selected GUI
+      if (!isVisible) {
+        gui.style.display = 'block';
+        dimBackground.style.display = 'block';
       }
-    }
-
-    function openModal(content) {
-      modalContent.firstChild.nodeValue = content;
-      modal.style.display = 'flex';
-    }
-
-    function closeModal() {
-      modal.style.display = 'none';
-    }
-
-    function incrementScore() {
-      const scoreElement = document.getElementById('score');
-      let score = parseInt(scoreElement.textContent, 10) || 0;
-      score++;
-      scoreElement.textContent = score;
     }
   </script>
 
