--- a/page2.html
+++ b/page2.html
@@ -60,13 +60,6 @@
       box-shadow: -2px -2px 4px rgba(255, 255, 255, 0.5);
     }
 
-    /* Chocolate chips positions */
-    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
-    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
-    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
-    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
-    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-
     .dim-background {
       position: absolute;
       top: 0;
@@ -164,13 +157,58 @@
   </footer>
 
   <script>
-    let score = 0;
+    // Open IndexedDB
+    async function openDatabase() {
+      return new Promise((resolve, reject) => {
+        const request = indexedDB.open('cookieClickerDB', 1);
 
-    function incrementScore() {
+        request.onerror = (event) => reject(event.target.error);
+
+        request.onsuccess = (event) => resolve(event.target.result);
+
+        request.onupgradeneeded = (event) => {
+          const db = event.target.result;
+          if (!db.objectStoreNames.contains('scores')) {
+            db.createObjectStore('scores', { keyPath: 'id' });
+          }
+        };
+      });
+    }
+
+    // Retrieve score from database
+    async function getScore() {
+      const db = await openDatabase();
+      return new Promise((resolve, reject) => {
+        const transaction = db.transaction('scores', 'readonly');
+        const store = transaction.objectStore('scores');
+        const request = store.get(1);
+
+        request.onerror = () => reject(request.error);
+
+        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
+      });
+    }
+
+    // Update score in database
+    async function updateScore(value) {
+      const db = await openDatabase();
+      return new Promise((resolve, reject) => {
+        const transaction = db.transaction('scores', 'readwrite');
+        const store = transaction.objectStore('scores');
+        const request = store.put({ id: 1, value });
+
+        request.onsuccess = () => resolve();
+        request.onerror = () => reject(request.error);
+      });
+    }
+
+    // Increment score
+    async function incrementScore() {
       score++;
       document.getElementById('score').textContent = score;
+      await updateScore(score);
 
-      // Visual feedback for the cookie click
+      // Animation
       const circle = document.querySelector('.click-circle');
       circle.style.transform = 'scale(1.1)';
       setTimeout(() => {
@@ -178,21 +216,29 @@
       }, 100);
     }
 
+    // Initialize score
+    async function initialize() {
+      score = await getScore();
+      document.getElementById('score').textContent = score;
+    }
+
+    // Toggle GUI
     function toggleGUI(guiId) {
       const gui = document.getElementById(guiId);
       const dimBackground = document.getElementById('dimBackground');
       const isVisible = gui.style.display === 'block';
 
-      // Close all GUIs and reset the dim background
       document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
       dimBackground.style.display = 'none';
 
-      // Toggle the selected GUI
       if (!isVisible) {
         gui.style.display = 'block';
         dimBackground.style.display = 'block';
       }
     }
+
+    let score = 0;
+    initialize();
   </script>
 
 </body>
