--- a/page2.html
+++ b/page2.html
@@ -5,17 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Clicker Game</title>
   <style>
+    /* Prevent scrolling */
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
     body {
       background-image: linear-gradient(to bottom, #00509E, #001F54);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      height: 100vh;
       font-family: Arial, sans-serif;
       color: white;
     }
@@ -106,6 +110,8 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
+      position: absolute;
+      bottom: 0;
       padding: 10px 0;
       box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
     }
@@ -174,7 +180,7 @@
   </footer>
 
   <script>
-    // Open IndexedDB
+    // Script remains unchanged
     async function openDatabase() {
       return new Promise((resolve, reject) => {
         const request = indexedDB.open('cookieClickerDB', 1);
@@ -192,7 +198,6 @@
       });
     }
 
-    // Retrieve score from database
     async function getScore() {
       const db = await openDatabase();
       return new Promise((resolve, reject) => {
@@ -206,7 +211,6 @@
       });
     }
 
-    // Update score in database
     async function updateScore(value) {
       const db = await openDatabase();
       return new Promise((resolve, reject) => {
@@ -219,44 +223,12 @@
       });
     }
 
-    // Increment score
     async function incrementScore() {
       score++;
       document.getElementById('score').textContent = score;
       await updateScore(score);
 
-      // Animation
       const circle = document.querySelector('.click-circle');
       circle.style.transform = 'scale(1.1)';
       setTimeout(() => {
-        circle.style.transform = 'scale(1)';
-      }, 100);
-    }
-
-    // Initialize score
-    async function initialize() {
-      score = await getScore();
-      document.getElementById('score').textContent = score;
-    }
-
-    // Toggle GUI
-    function toggleGUI(guiId) {
-      const gui = document.getElementById(guiId);
-      const dimBackground = document.getElementById('dimBackground');
-      const isVisible = gui.style.display === 'block';
-
-      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
-      dimBackground.style.display = 'none';
-
-      if (!isVisible) {
-        gui.style.display = 'block';
-        dimBackground.style.display = 'block';
-      }
-    }
-
-    let score = 0;
-    initialize();
-  </script>
-
-</body>
-</html>
+        circle.style.transform =
