--- a/page2.html
+++ b/page2.html
@@ -5,23 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Clicker Game</title>
   <style>
-    /* Prevent scrolling */
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-    }
-
     body {
       background-image: linear-gradient(to bottom, #00509E, #001F54);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      margin: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
+      height: 100vh;
       font-family: Arial, sans-serif;
       color: white;
+      overflow: hidden; /* Prevent scrolling */
     }
 
     .counter-box {
@@ -64,7 +61,6 @@
       box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5); /* White fading inside the chips */
     }
 
-    /* Chocolate chip positions and sizes */
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
     .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
     .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
@@ -110,10 +106,10 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
-      position: absolute;
-      bottom: 0;
       padding: 10px 0;
       box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+      position: absolute;
+      bottom: 0;
     }
 
     .footer-button {
@@ -180,15 +176,11 @@
   </footer>
 
   <script>
-    // Script remains unchanged
     async function openDatabase() {
       return new Promise((resolve, reject) => {
         const request = indexedDB.open('cookieClickerDB', 1);
-
         request.onerror = (event) => reject(event.target.error);
-
         request.onsuccess = (event) => resolve(event.target.result);
-
         request.onupgradeneeded = (event) => {
           const db = event.target.result;
           if (!db.objectStoreNames.contains('scores')) {
@@ -204,10 +196,8 @@
         const transaction = db.transaction('scores', 'readonly');
         const store = transaction.objectStore('scores');
         const request = store.get(1);
-
-        request.onerror = () => reject(request.error);
-
         request.onsuccess = () => resolve(request.result ? request.result.value : 0);
+        request.onerror = () => reject(request.error);
       });
     }
 
@@ -217,7 +207,6 @@
         const transaction = db.transaction('scores', 'readwrite');
         const store = transaction.objectStore('scores');
         const request = store.put({ id: 1, value });
-
         request.onsuccess = () => resolve();
         request.onerror = () => reject(request.error);
       });
@@ -231,4 +220,31 @@
       const circle = document.querySelector('.click-circle');
       circle.style.transform = 'scale(1.1)';
       setTimeout(() => {
-        circle.style.transform =
+        circle.style.transform = 'scale(1)';
+      }, 100);
+    }
+
+    async function initialize() {
+      score = await getScore();
+      document.getElementById('score').textContent = score;
+    }
+
+    function toggleGUI(guiId) {
+      const gui = document.getElementById(guiId);
+      const dimBackground = document.getElementById('dimBackground');
+      const isVisible = gui.style.display === 'block';
+
+      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
+      dimBackground.style.display = 'none';
+
+      if (!isVisible) {
+        gui.style.display = 'block';
+        dimBackground.style.display = 'block';
+      }
+    }
+
+    let score = 0;
+    initialize();
+  </script>
+</body>
+</html>
