--- a/page2.html
+++ b/page2.html
@@ -78,7 +78,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: radial-gradient(circle, transparent, rgba(0, 0, 255, 0.5));
+      background: rgba(0, 0, 0, 0); /* Changed to transparent background */
       display: none;
       z-index: 10;
     }
@@ -234,14 +234,12 @@
       const dimBackground = document.getElementById('dimBackground');
       const isVisible = gui.style.display === 'block';
 
-      document.querySelectorAll('.gui').forEach(g => g.style.display = 'none');
+      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
       dimBackground.style.display = 'none';
 
       if (!isVisible) {
         gui.style.display = 'block';
         dimBackground.style.display = 'block';
-      } else {
-        gui.style.display = 'none';
       }
     }
 
