--- a/page2.html
+++ b/page2.html
@@ -78,9 +78,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0); /* Changed to transparent background */
+      background: rgba(0, 0, 0, 0); /* Fully transparent background */
       display: none;
-      z-index: 10;
+      z-index: 9; /* Lower z-index to prevent overlap with other elements */
+      pointer-events: none; /* Allow interaction with elements behind it */
     }
 
     .gui {
