--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,9 @@
   <style>
     body {
       background-image: linear-gradient(to bottom, #00509E, #001F54);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       margin: 0;
       display: flex;
       flex-direction: column;
@@ -15,7 +18,7 @@
       height: 100vh;
       font-family: Arial, sans-serif;
       color: white;
-      overflow: hidden;
+      overflow: hidden; /* Prevent scrolling */
     }
 
     .counter-box {
@@ -25,6 +28,7 @@
       padding: 10px;
       font-size: 1.5em;
       font-weight: bold;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
     }
 
     .game-container {
@@ -46,6 +50,7 @@
       transition: transform 0.1s ease-in-out;
       outline: none;
       user-select: none;
+      -webkit-tap-highlight-color: transparent;
     }
 
     .chocolate-chip {
@@ -53,18 +58,8 @@
       background-color: #3E2723; /* Dark chocolate color */
       border-radius: 50%;
       pointer-events: none; /* Prevent chips from triggering events */
+      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5); /* White fading inside the chips */
     }
-
-    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
-    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
-    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
-    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
-    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-    .chocolate-chip:nth-child(6) { width: 25px; height: 25px; top: 40%; left: 30%; }
-    .chocolate-chip:nth-child(7) { width: 18px; height: 18px; top: 65%; left: 75%; }
-    .chocolate-chip:nth-child(8) { width: 26px; height: 26px; top: 35%; left: 55%; }
-    .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
-    .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
 
     .dim-background {
       position: absolute;
@@ -72,8 +67,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: none;
-      pointer-events: none;
+      background: rgba(0, 0, 0, 0); /* Fully transparent background */
+      display: none;
+      z-index: 9; /* Lower z-index to prevent overlap with other elements */
+      pointer-events: none; /* Allow interaction with elements behind it */
     }
 
     .gui {
@@ -91,30 +88,6 @@
       padding: 20px;
       text-align: center;
       color: black;
-    }
-
-    footer {
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      position: absolute;
-      bottom: 0;
-    }
-
-    .footer-button {
-      color: white;
-      background: transparent;
-      border: none;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .footer-button:hover {
-      text-decoration: underline;
     }
 
     .upgrade-line {
@@ -148,6 +121,32 @@
     .upgrade-button:hover {
       background-color: #003f7a;
     }
+
+    footer {
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+      position: absolute;
+      bottom: 0;
+    }
+
+    .footer-button {
+      color: white;
+      background: transparent;
+      border: none;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
+    }
+
+    .footer-button:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -174,7 +173,7 @@
     </div>
   </div>
 
-  <!-- Store GUI -->
+  <!-- Shop GUI -->
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
@@ -187,19 +186,15 @@
     </div>
   </div>
 
-  <!-- Special GUI -->
+  <!-- Other GUIs -->
   <div class="gui" id="specialGUI">
     <h2>Special</h2>
     <p>Special events and items.</p>
   </div>
-
-  <!-- Stats GUI -->
   <div class="gui" id="statsGUI">
     <h2>Stats</h2>
     <p>Check your progress here.</p>
   </div>
-
-  <!-- Misc GUI -->
   <div class="gui" id="miscGUI">
     <h2>Misc</h2>
     <p>Extra settings and options.</p>
@@ -213,23 +208,68 @@
   </footer>
 
   <script>
-    let score = 0;
+    async function openDatabase() {
+      const request = indexedDB.open('cookieClickerDB', 1);
+      return new Promise((resolve, reject) => {
+        request.onerror = () => reject(request.error);
+        request.onsuccess = () => resolve(request.result);
+        request.onupgradeneeded = (event) => {
+          const db = event.target.result;
+          if (!db.objectStoreNames.contains('scores')) {
+            db.createObjectStore('scores', { keyPath: 'id' });
+          }
+        };
+      });
+    }
 
-    function incrementScore() {
+    async function getScore() {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readonly');
+      const store = transaction.objectStore('scores');
+      const request = store.get(1);
+      return new Promise((resolve) => {
+        request.onsuccess = () => resolve(request.result ? request.result.value : 0);
+      });
+    }
+
+    async function updateScore(value) {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readwrite');
+      const store = transaction.objectStore('scores');
+      store.put({ id: 1, value });
+    }
+
+    async function incrementScore() {
       score++;
+      document.getElementById('score').textContent = score;
+      await updateScore(score);
+
+      const circle = document.querySelector('.click-circle');
+      circle.style.transform = 'scale(1.1)';
+      setTimeout(() => circle.style.transform = 'scale(1)', 100);
+    }
+
+    async function initialize() {
+      score = await getScore();
       document.getElementById('score').textContent = score;
     }
 
     function toggleGUI(guiId) {
       const gui = document.getElementById(guiId);
+      const dimBackground = document.getElementById('dimBackground');
       const isVisible = gui.style.display === 'block';
 
       document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
+      dimBackground.style.display = 'none';
 
       if (!isVisible) {
         gui.style.display = 'block';
+        dimBackground.style.display = 'block';
       }
     }
+
+    let score = 0;
+    initialize();
   </script>
 </body>
 </html>
