--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Clicker Game</title>
   <style>
+    /* General Styles */
     body {
       background-image: linear-gradient(to bottom, #00509E, #001F54);
       background-size: cover;
@@ -37,12 +38,13 @@
       align-items: center;
       justify-content: center;
       flex-grow: 1;
+      position: relative;
     }
 
     .click-circle {
       width: 300px;
       height: 300px;
-      background-color: #8B4513; /* Cookie color */
+      background-color: #8B4513;
       border-radius: 50%;
       position: relative;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
@@ -55,22 +57,35 @@
 
     .chocolate-chip {
       position: absolute;
-      background-color: #3E2723; /* Dark chocolate color */
+      background-color: #3E2723;
       border-radius: 50%;
       pointer-events: none;
-      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5); /* White fading inside the chips */
+      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
     }
 
     .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
     .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
     .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
-    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
-    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-    .chocolate-chip:nth-child(6) { width: 25px; height: 25px; top: 40%; left: 30%; }
-    .chocolate-chip:nth-child(7) { width: 18px; height: 18px; top: 65%; left: 75%; }
-    .chocolate-chip:nth-child(8) { width: 26px; height: 26px; top: 35%; left: 55%; }
-    .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
-    .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
+
+    .click-feedback {
+      position: absolute;
+      font-size: 1.2em;
+      font-weight: bold;
+      color: yellow;
+      animation: fade-out 1s forwards;
+      pointer-events: none;
+    }
+
+    @keyframes fade-out {
+      0% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+    }
 
     .dim-background {
       position: absolute;
@@ -78,10 +93,9 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0); /* Fully transparent background */
+      background: rgba(0, 0, 0, 0.5);
       display: none;
-      z-index: 9; /* Lower z-index to prevent overlap with other elements */
-      pointer-events: none; /* Allow interaction with elements behind it */
+      z-index: 9;
     }
 
     .gui {
@@ -101,38 +115,6 @@
       color: black;
     }
 
-    .upgrade-line {
-      border-top: 1px solid black;
-      margin-top: 20px;
-      padding-top: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .upgrade-line p {
-      margin: 0;
-    }
-
-    .upgrade-line p:first-child {
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-
-    .upgrade-button {
-      padding: 5px 15px;
-      background-color: #00509E;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 1em;
-      border-radius: 5px;
-    }
-
-    .upgrade-button:hover {
-      background-color: #003f7a;
-    }
-
     footer {
       width: 100%;
       background-color: rgba(0, 0, 0, 0.5);
@@ -140,7 +122,6 @@
       justify-content: space-around;
       align-items: center;
       padding: 10px 0;
-      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
       position: absolute;
       bottom: 0;
     }
@@ -169,45 +150,11 @@
   </div>
 
   <div class="game-container">
-    <div class="click-circle" onclick="incrementScore()">
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
+    <div class="click-circle" onclick="incrementScore(event)">
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
-  </div>
-
-  <!-- Shop GUI -->
-  <div class="gui" id="storeGUI">
-    <h2>Store</h2>
-    <p>Buy upgrades and items here!</p>
-    <div class="upgrade-line">
-      <div>
-        <p>clicks</p>
-        <p>plus one cookie per click</p>
-      </div>
-      <button class="upgrade-button" onclick="purchaseUpgrade()">10 🍪</button>
-    </div>
-  </div>
-
-  <!-- Other GUIs -->
-  <div class="gui" id="specialGUI">
-    <h2>Special</h2>
-    <p>Special events and items.</p>
-  </div>
-  <div class="gui" id="statsGUI">
-    <h2>Stats</h2>
-    <p>Check your progress here.</p>
-  </div>
-  <div class="gui" id="miscGUI">
-    <h2>Misc</h2>
-    <p>Extra settings and options.</p>
   </div>
 
   <footer>
@@ -217,7 +164,29 @@
     <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
+  <div class="gui" id="storeGUI">
+    <h2>Store</h2>
+    <p>Buy upgrades and items here!</p>
+  </div>
+
+  <div class="gui" id="specialGUI">
+    <h2>Special</h2>
+    <p>Special events and items.</p>
+  </div>
+
+  <div class="gui" id="statsGUI">
+    <h2>Stats</h2>
+    <p>Check your progress here.</p>
+  </div>
+
+  <div class="gui" id="miscGUI">
+    <h2>Misc</h2>
+    <p>Extra settings and options.</p>
+  </div>
+
   <script>
+    let score = 0;
+
     async function openDatabase() {
       const request = indexedDB.open('cookieClickerDB', 1);
       return new Promise((resolve, reject) => {
@@ -228,7 +197,7 @@
           if (!db.objectStoreNames.contains('scores')) {
             db.createObjectStore('scores', { keyPath: 'id' });
           }
-        });
+        };
       });
     }
 
@@ -249,34 +218,19 @@
       store.put({ id: 1, value });
     }
 
-    let score = 0;
-    let cookiesPerClick = 1;
-
-    async function incrementScore() {
-      score += cookiesPerClick;
+    async function incrementScore(event) {
+      score++;
       document.getElementById('score').textContent = score;
       await updateScore(score);
 
-      const circle = document.querySelector('.click-circle');
-      circle.style.transform = 'scale(1.1)';
-      setTimeout(() => circle.style.transform = 'scale(1)', 100);
-    }
-
-    async function purchaseUpgrade() {
-      if (score >= 10) {
-        score -= 10;
-        cookiesPerClick += 1;
-        document.getElementById('score').textContent = score;
-        await updateScore(score);
-        alert("Upgrade purchased! Your clicks are now stronger.");
-      } else {
-        alert("Not enough cookies to purchase this upgrade.");
-      }
-    }
-
-    async function initialize() {
-      score = await getScore();
-      document.getElementById('score').textContent = score;
+      const feedback = document.createElement('div');
+      feedback.className = 'click-feedback';
+      feedback.textContent = `+1`;
+      feedback.style.left = `${event.offsetX}px`;
+      feedback.style.top = `${event.offsetY}px`;
+      const container = document.querySelector('.game-container');
+      container.appendChild(feedback);
+      setTimeout(() => feedback.remove(), 1000);
     }
 
     function toggleGUI(guiId) {
@@ -291,6 +245,11 @@
         gui.style.display = 'block';
         dimBackground.style.display = 'block';
       }
+    }
+
+    async function initialize() {
+      score = await getScore();
+      document.getElementById('score').textContent = score;
     }
 
     initialize();
