--- a/page2.html
+++ b/page2.html
@@ -183,6 +183,7 @@
       <div class="chocolate-chip"></div>
     </div>
 
+    <!-- Shop GUI - the button already exists -->
     <button class="upgrade-button" onclick="add10Cookies()">10 🍪</button>
     <span id="addedCookies">0</span> cookies
   </div>
